import "client.comm.proto";
package client;

/* 
功能点
1 场景跳转 上报场景               JUMP_SCENE
2 角色跳转 上报角色               JUMP_ROLE
3 NPC跳转  上报场景与NPC          JUMP_NPC
4 定点跳转 上报场景与坐标         JUMP_POINT
*/

message jump_scene {
    enum DST_TYPE {
        SCENE = 1;  // 1  = 场景
        ROLE  = 2;  // 2  = 角色
        DTASK = 3;  // 3  = 任务
        TRANS = 5;  // 5  = 传送
        CLUMP = 6;  // 6  = 召集
        KILL  = 10; // 10 = 追杀
    }
    required DST_TYPE   dst_type	= 1;	// 目标类型
    required uint32		dst_id		= 2;	// 目标ID, 场景或角色,或者传送点ID;	
    required uint32		dst_index	= 3;	// 列表序号
    required uint32		jump_index	= 4;	// 使用的跳转点
    enum CODE_TYPE {
        LOGIN      = 1; // 登陆跳转
        FLYSHOES   = 2; // 飞鞋跳转
        JUMP_POINT = 3; // 跳转点跳转
        RELIVE     = 4; // 复活跳转
        RAID       = 5; // 副本跳转
        BATTLE     = 6; // 战场跳转
        SKILL      = 7; // 技能跳转
        TASK       = 8; // 任务跳转
        SPA        = 9; // 温泉跳转
    }
    required CODE_TYPE jump_code = 5;                  // 跳转类型
    required int32	x	         = 6  [default = 0];   // 跳转目地地址坐标
    required int32	y	         = 7  [default = 0];
    required int32	z	         = 8  [default = 0];
    required uint32 param	     = 9  [default = 0];   // 参数
    required uint32 map_id       = 10 [default = 0];   // 服务端填写，客户端不必关心此参数,直接填写0
    required uint32 scene_id     = 11 [default = 0];   // 服务端填写，客户端不必关心此参数,直接填写0

    optional server_head svr_head = 1000;              // 服务端填写项，客户端不需要关心也不必填写数据
}

message jump_scene_rsp {
    required uint32 ret = 1; // 0 成功 1 没有缩地符 2 副本里没有清怪 3 错误的跳转类型 4 错误的跳转点 5 系统错误 6 跳转世界BOSS失败
}






